# linesep

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.rst  TODO.md  linesep.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: changelog.rst  conf.py  core.rst  index.rst  misc.rst  splitters.rst
src/: linesep.py
src/linesep/: __init__.py  funcs.py  splitters.py
test/: conftest.py  test_empty.py  test_join.py  test_join_bytes.py  test_join_text.py  test_one_sep.py  test_other.py  test_split.py  test_split_bytes.py  test_split_text.py  test_splitters.py  test_text.py
test/test_core/: conftest.py  test_join_bytes.py  test_join_text.py  test_split_bytes.py  test_split_text.py
