[build-system]
requires = [
    "setuptools @ git+https://github.com/pypa/setuptools@experimental/support-pyproject",
    "wheel ~= 0.32"
]
build-backend = "setuptools.build_meta"

[project]
name = "linesep"
description = "Handling lines with arbitrary separators"
authors = [{name = "John Thorvald Wodder II", email = "linesep@varonathe.org"}]
keywords = [
    "delimiters",
    "line break",
    "line-ending",
    "linebreak",
    "newline",
    "paragraphs",
    "separator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    # Development Status :: 5 - Production/Stable
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["license", "version"]
requires-python = "~=3.6"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/jwodder/linesep"
"Source Code" = "https://github.com/jwodder/linesep"
"Bug Tracker" = "https://github.com/jwodder/linesep/issues"

[tool.setuptools.dynamic]
license = "MIT"
license-files = ["LICENSE"]
version = {attr = "linesep.__version__"}

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
no_implicit_reexport = true
strict_equality = true
show_error_codes = true
show_traceback = true
pretty = true
