[aliases]
make = sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = linesep
version = attr:linesep.__version__
description = Handling lines with arbitrary separators
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = linesep@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/linesep

keywords =
    delimiters
    line break
    line-ending
    linebreak
    newline
    separator

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Text Processing
    Topic :: Utilities

project_urls =
    Source Code = https://github.com/jwodder/linesep
    Bug Tracker = https://github.com/jwodder/linesep/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = linesep
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4
install_requires =
